# cprojects

./: .gitignore
atomic_demo/: .tasks  B+tree.c  CMakeLists.txt  android_iconv.c  android_test.c  copyfile.c  del_rename.c  getopt_test.c  gflags_test.cpp  gtest.cpp  link_test.c  lock_test.cpp  log.txt  log_file.c  memory_file.c  multi_parameters.c  multi_socket_client.c  namespace_main.cpp  namespace_test.cpp  pointerAdd.c  read_write.c  read_write_binary.c  recursion.c  regex.c  regex.cpp  releaseMarco.c  serialzation.cpp  socket_client.c  socket_server.c  sprint.c  test.c  testbinary.cpp  testconst.c  testconst.cpp  thread.cpp  thread_id.c  time.c  timeStamp.c  vcpkg.json  vla.c  (+2 more)
atomic_demo/include/: lock_test.hpp
gmsslSM9/: CMakeLists.txt
gmsslSM9/include/gmssl/: error.h  mem.h  sm9.h
gmsslSM9/src/: SM9.c  SM9.h  gmsslsm9.def  hex.c  main.cpp  rand.c  rand_android.c  sm9_alg.c  sm9_key.c  sm9_lib.c
gmsslSM9/swig/: SM9_wrap.c  SM9_wrap.cxx  setup.py  sm9.i
harddisk/: CMakeLists.txt
harddisk/src/: conflict.c  test.c  test.cc  test.cpp  test.java
libcurlTest/: CMakeLists.txt
libcurlTest/src/: cert_parse.cpp  gmcurlTest.c  libcurlTest.c
serialzation/: CMakeLists.txt
serialzation/include/: BlkCoSignJava.pb.h  CoSign.h  blkcosign_generated.h  blkcosignjava_generated.h
serialzation/src/: BlkCoSignJava.pb.cc  serialization.cpp  serialization_flatbuffers.cpp  serialization_proto.cpp  util.cpp
sqlcipher/: CMakeLists.txt  android_compile.ps1  misc.c
